fixed layout for about us

--- a/CvHub/Views/Home/AboutUs.cshtml
+++ b/CvHub/Views/Home/AboutUs.cshtml
@@ -21,7 +21,7 @@
     
     <div class="row">
         
-        <div class="col-sm-4">
+        <div class="col-lg-6 col-md-6 col-sm-4 textbox">
             <h3>How it all started </h3>
             <p>
                 We are 4 students who studied Object Oriented Programming (OOP) at the Commercial Academy when we got the chance to do a project work. Since we all had our own experience of how difficult it is to get a job and thus know the importance of having a good CV to get a job, therefore we have decided to program a free page where you can easily find an already completed CV.
@@ -31,32 +31,32 @@
             <p>We want our users to have it as easy as possible to get a ready-made template to be able to create as good a CV as possible without being charged anything per month</p>
         </div>
 
-        <div class="col-sm-12 col-lg-2 col-md-2">
+        <div class="us col-sm-12 col-lg-1 col-md-1">
             <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
-            <h3>Felipe </h3>
+            <h3 class="name">Felipe </h3>
             <h6><u>Full stack</u></h6>
-            <p> “Oh I’m sorry did I break your conversation?” – Samuel L. Jackson </p>
-        </div>
-        <div class="col-sm-12 col-lg-2 col-md-2">
+            <em class="aboutme"> “Oh I’m sorry did I break your conversation?” – Samuel L. Jackson </em>
+</div>
+        <div class="us col-sm-12 col-lg-1 col-md-1">
             <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
-            <h3>Rebecca</h3>
+            <h3 class="name">Rebecca</h3>
             <h6><u>Front-end</u></h6>
-            <p>“I grew up in the South with guns everywhere and we never shot anyone. This [shooting] is about people who aren’t taught the value of life.” – Samuel L. Jackson</p>
+            <em class="aboutme">“I grew up in the South with guns everywhere and we never shot anyone. This [shooting] is about people who aren’t taught the value of life.” – Samuel L. Jackson</em>
 
         </div>
-        <div class="col-sm-12 col-lg-2 col-md-2">
+        <div class="us col-sm-12 col-lg-1 col-md-1">
             <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
-            <h3>  Tobias  </h3>
+            <h3 class="name">  Tobias  </h3>
             <h6><u>Back-end</u></h6>
-            <p>.“Take a stand for what’s right. Raise a ruckus and make a change. You may not always be popular, but you’ll be part of something larger and bigger and greater than yourself. Besides, making history is extremely cool.” – Samuel L. Jackson</p>
+            <em class="aboutme">“Take a stand for what’s right. Raise a ruckus and make a change. You may not always be popular, but you’ll be part of something larger and bigger and greater than yourself. Besides, making history is extremely cool.” – Samuel L. Jackson</em>
 
-        </div>
-        <div class="col-sm-12 col-lg-2 col-md-2">
+</div>
+        <div class="us col-sm-12 col-lg-1 col-md-1">
             <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" width="95" height="100">
-            <h3>Vivvi</h3>
+            <h3 class="name">Vivvi</h3>
             <h6><u>Full stack</u></h6>
-            <p>“I just always knew that I lived in two worlds. There was the world of my house and community, but to make my way in that white world I had to modify the way I spoke and acted. I had to sometimes not make direct eye contact.” – Samuel L. Jackson</p>
-        </div>
+            <em class="aboutme">“I just always knew that I lived in two worlds. There was the world of my house and community, but to make my way in that white world I had to modify the way I spoke and acted. I had to sometimes not make direct eye contact.” – Samuel L. Jackson</em>
+</div>
 
         <div class="container">
             <div class="btn-group-vertical float">
