--- a/CvHub/Views/Shared/_Layout.cshtml
+++ b/CvHub/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container copyright">
-            &copy; 2021 - CvHub - <a asp-area="" asp-controller="AboutUs" asp-action="AboutUs">Privacy</a>
+            &copy; 2021 - CvHub - <a asp-controller="Home" asp-action="AboutUs">About Us</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
