--- a/CvHub/Views/User/MyPage.cshtml
+++ b/CvHub/Views/User/MyPage.cshtml
@@ -9,9 +9,9 @@
             <div class="col-md-3 border-right">
                 <div class=" d-flex flex-column align-items-center text-center">
                     <img class="rounded-circle" src="/css/myPage/images/avatar.png" id="photo" width="90">
-                    <span class="font-weight-bold">Vivi Tran</span>
-                    <span class="text-black-50">hejhej@gmail.com</span>
-                    <span>Sweden</span>
+                    <span class="font-weight-bold">@Model.FirstName @Model.LastName</span>
+                    <span class="text-black-50">@Model.Email</span>
+                    <span>@Model.Country</span>
                 </div>
                 <div class="mt-5 text-center"><button class="btn btn-outline-primary profile-button" type="button">My CVs</button></div>
             </div>
@@ -22,32 +22,32 @@
                     </div>
                     <div class="row mt-3">
                         <div class="profile-form col-md-6">
-                            <label class="labels">First Name</label>
-                            <input type="text" class="form-control" placeholder="first name">
+                            <label class="labels">First name</label>
+                            <input type="text" class="form-control" placeholder="@Model.FirstName">
                         </div>
                         <div class="profile-form col-md-6">
                             <label class="labels">Surname</label>
-                            <input type="text" class="form-control" placeholder="last name">
+                            <input type="text" class="form-control" placeholder="@Model.LastName">
                         </div>
                         <div class="profile-form col-md-12">
                             <label class="labels">Email</label>
-                            <input type="email" class="form-control" placeholder="email">
+                            <input type="email" class="form-control" placeholder="@Model.Email">
                         </div>
                         <div class="profile-form col-md-12">
                             <label class="labels">Phone Number</label>
-                            <input type="text" class="form-control" placeholder="phone number">
+                            <input type="text" class="form-control" placeholder="@Model.PhoneNumber">
                         </div>
                         <div class="profile-form col-md-6">
                             <label class="labels">City</label>
-                            <input type="text" class="form-control" placeholder="city">
+                            <input type="text" class="form-control" placeholder="@Model.City">
                         </div>
                         <div class="profile-form col-md-6">
                             <label class="labels">State/Region</label>
-                            <input type="text" class="form-control" placeholder="state/region">
+                            <input type="text" class="form-control" placeholder="@Model.State">
                         </div>
                         <div class="profile-form col-md-12">
                             <label class="labels">Country</label>
-                            <input type="text" class="form-control" placeholder="country">
+                            <input type="text" class="form-control" placeholder="@Model.Country">
                         </div>
                     </div>
                 </div>
