--- a/CvHub/Views/User/Register.cshtml
+++ b/CvHub/Views/User/Register.cshtml
@@ -18,6 +18,18 @@
             <input asp-for="LastName" type="text" class="form-control item" id="lastname" placeholder="Last Name">
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
+        <div class="form-group">
+            <input asp-for="Country" type="password" class="form-control item" id="country" placeholder="Country">
+            <span asp-validation-for="Country" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input asp-for="State" type="password" class="form-control item" id="state" placeholder="State">
+            <span asp-validation-for="State" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input asp-for="City" type="password" class="form-control item" id="city" placeholder="City">
+            <span asp-validation-for="City" class="text-danger"></span>
+        </div>
         @if (Model != null)
         {
             <div class="text-center text-danger">@Model.Email is already taken!</div>
