Fixade till några fält på register fomret som var av fel typ.

--- a/CvHub/Views/User/Register.cshtml
+++ b/CvHub/Views/User/Register.cshtml
@@ -19,15 +19,15 @@
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <input asp-for="Country" type="password" class="form-control item" id="country" placeholder="Country">
+            <input asp-for="Country" type="text" class="form-control item" id="country" placeholder="Country">
             <span asp-validation-for="Country" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <input asp-for="State" type="password" class="form-control item" id="state" placeholder="State">
+            <input asp-for="State" type="text" class="form-control item" id="state" placeholder="State">
             <span asp-validation-for="State" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <input asp-for="City" type="password" class="form-control item" id="city" placeholder="City">
+            <input asp-for="City" type="text" class="form-control item" id="city" placeholder="City">
             <span asp-validation-for="City" class="text-danger"></span>
         </div>
         @if (Model != null)
