--- a/CvHub/Views/Home/Index.cshtml
+++ b/CvHub/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="card-signin">
                 <div class="card-body">
                     <h5 class="card-title text-center">Sign In</h5>
-                    <form method="post" asp-action="DbAuthenticate" class="form-signin">
+                    <form method="post" asp-controller="Validation" asp-action="DbAuthenticate" class="form-signin">
                         <div class="form-label-group">
                             <input asp-for="Email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
                             <label for="inputEmail">Email address</label>
