--- a/CvHub/Views/Shared/_Layout.cshtml
+++ b/CvHub/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1 flex-row-reverse">
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="AboutUs"><h6 class="tab">About Us</h6></a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Template" asp-action="index"><h6 class="tab">Templates</h6></a>
                         </li>
                         <li class="nav-item">
