--- a/CvHub/Views/Home/Index.cshtml
+++ b/CvHub/Views/Home/Index.cshtml
@@ -2,7 +2,41 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<head>
+    <link rel="stylesheet" href="~/css/socialMedia.css" />
+</head>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+            <div class="card-signin">
+                <div class="card-body">
+                    <div class="col mx-auto text-center">
+                    <img class="picture" src="~/Pic/cvlogo.svg" alt="CV">
+                        </div>
+                    <h5 class="card-title text-center">Sign In</h5>
+                    <form method="post" asp-action="DbAuthenticate" class="form-signin">
+                        <div class="form-label-group">
+                            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                            <label for="inputEmail">Email address</label>
+                        </div>
+                        <div class="form-label-group">
+                            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                            <label for="inputPassword">Password</label>
+                        </div>
+                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+                        <a asp-controller="User" asp-action="Register" class="btn btn-lg btn-success btn-block text-uppercase">Register</a>
+                         <span><hr class="my-4">or<hr class="my-4"></span>
+                        @*<a asp-action="GoogleSignIn" class="btn btn-lg btn-google btn-block text-uppercase"><i class="fab fa-google mr-2"></i> Sign in with Google</a>*@
+                       <div class="row social-media">
+                          
+                           <div class="col text-right" style="margin-right:5%;">
+                               <a asp-action="FacebookSignIn" ><i class="fab fa-facebook-f mr-2"></i> <img class="login-logo" src="~/Pic/facebook-logo.svg"></a>
+                       </div>    
+                       </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
