--- a/CvHub/Views/Home/Index.cshtml
+++ b/CvHub/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
         <div class="col-sm-6 col-md-6 col-lg-8 col-xl-4 p-sm-2 p-md-2 p-lg-5 p-xl-5">
             <div class="card-signin">
                 <div class="card-body">
+                    <img class="col mx-auto text-center" src="~/Pic/cvlogo.svg" alt="CV" style="max-height:100px">
                     <h5 class="card-title text-center">Sign In</h5>
                     <form method="post" asp-controller="Validation" asp-action="DbAuthenticate" class="form-signin">
                         <div class="form-label-group">
@@ -23,13 +24,13 @@
                         <a asp-controller="User" asp-action="Register" class="btn btn-lg btn-success btn-block text-uppercase">Register</a>
                         <hr class="my-4">
                         @*<a asp-action="GoogleSignIn" class="btn btn-lg btn-google btn-block text-uppercase"><i class="fab fa-google mr-2"></i> Sign in with Google</a>*@
-                        <a asp-controller="Validation" asp-action="FacebookSignIn" class="btn btn-lg btn-facebook btn-block text-uppercase"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</a>
+                        <a asp-controller="Validation" asp-action="FacebookSignIn" ><i class="fab fa-facebook-f mr-2"></i> <img class="col mx-auto text-center" src="~/Pic/facebook-logo.svg" title="Sign in with Facebook" style="max-height:50px;"></a>
                     </form>
                 </div>
             </div>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 p-sm-2 p-md-2 p-lg-5 p-xl-5 offset-xl-4">
-            <img src="~/Pic/Favicon.png" alt="CV">
+           
         </div>
     </div>
 </div>
