--- a/CvHub/Views/Shared/_Layout.cshtml
+++ b/CvHub/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewData["Title"] - CVHub</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="icon" href="~/Pic/Favicon.png" type="image/vnd.microsoft.icon" />
 
 </head>
 <body>
