kan lägga till utbildning och jobb i formulär

--- a/CvHub/Views/Home/AboutUs.cshtml
+++ b/CvHub/Views/Home/AboutUs.cshtml
@@ -24,10 +24,10 @@
         <div class="col-lg-6 col-md-6 col-sm-4 textbox">
             <h3>How it all started </h3>
             <p>
-                We are 4 students who studied Object Oriented Programming (OOP) at the Commercial Academy when we got the chance to do a project work. Since we all had our own experience of how difficult it is to get a job and thus know the importance of having a good CV to get a job, therefore we have decided to program a free page where you can easily find an already completed CV.
+                We are 4 students who studied Object Oriented Programming (OOP) at the Commercial Academy when we got the chance to do a project. Since we all had our own experience of how difficult it is to get a job and thus know the importance of having a good CV to get a job, therefore we have decided to program a free page where you can easily find an already completed CV.
             </p>
 
-            <h4>For us is a simple path to a good CV is most important</h4>
+            <h4>For us a simple path to a good CV is most important</h4>
             <p>We want our users to have it as easy as possible to get a ready-made template to be able to create as good a CV as possible without being charged anything per month</p>
         </div>
 
