--- a/CvHub/Views/Template/Template1.cshtml
+++ b/CvHub/Views/Template/Template1.cshtml
@@ -1,8 +1,4 @@
-﻿
-
-
-
-    <meta name="keywords" content="About Us, CV, Job Application, Help with CV, CVHub">
+﻿    <meta name="keywords" content="About Us, CV, Job Application, Help with CV, CVHub">
 
     <link rel="stylesheet" href="~/css/template/templatestylesheet.css" />
 
@@ -11,7 +7,7 @@
         <div class="row">
             <a class="btn btn-primary btn-lg" asp-controller="Template" asp-action="TemplateForm" style="text-align:center; margin:auto;">Choose this template</a><br>
         </div>
-
+       
 
         <div class="row header">
 
