--- a/CvHub/Views/Template/Index.cshtml
+++ b/CvHub/Views/Template/Index.cshtml
@@ -22,7 +22,7 @@
             <h5 style="margin-top:0.5%">Coming soon!</h5>
         </div>
         <div class="col">
-            <a class="btn btn-primary" asp-controller="Template" asp-action="Cv" >View</a> @*Should oper the page Cv.cshtml*@
+            <a class="btn btn-primary" asp-controller="Template" asp-action="Template1" >View</a> @*Should oper the page Cv.cshtml*@
             <a class="btn btn-light" asp-controller="Template" asp-action="TemplateForm">Choose</a>
         </div>
     </div>
