--- a/CvHub/Views/Template/TemplateForm.cshtml
+++ b/CvHub/Views/Template/TemplateForm.cshtml
@@ -1,152 +1,83 @@
-﻿<meta name="keywords" content="About Us, CV, Job Application, Help with CV, CVHub">
+﻿@model CVHub.Models.CvTemp
+
+<meta name="keywords" content="About Us, CV, Job Application, Help with CV, CVHub">
 <link rel="stylesheet" href="~/css/template/templateform.css" />
 
 <div class="container wholeform">
 
     <h5>Photo</h5>
-    <form>
+    <form method="post" asp-controller="Cv" asp-action="Create">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="custom-file col">
             <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
             <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
         </div>
 
-
-        <div class="row">
-            <div class="col">
-                <h5>Firstname</h5>
-                <input type="text" class="form-control" placeholder="First name">
-            </div>
-            <div class="col">
-                <h5>Lastname</h5>
-                <input type="text" class="form-control" placeholder="Last name">
-            </div>
+        <div class="col">
+            <h5>Title</h5>
+            <input asp-for="Title" type="text" class="form-control" placeholder="First name">
+            <span asp-validation-for="Title" class="text-danger"></span>
         </div>
 
 
         <h5>About me</h5>
-        <textarea class="form-control" type="text" placeholder="Tell us something about yourself. What are your interests and what makes you YOU!" aria-label="With textarea"></textarea>
+        <textarea asp-for="AboutMe" class="form-control" type="text" placeholder="Tell us something about yourself. What are your interests and what makes you YOU!" aria-label="With textarea"></textarea>
 
         @*/ school *@
 
         <h5>Education</h5>
-        <div class="row">
-            <div class="col">
-                School
-                <input type="text" class="form-control" placeholder="School">
+        @for (int i = 0; i < Model.Educations.Count; i++)
+        {
+            <div class="row">
+                <div class="col">
+                    School
+                    <input asp-for="Educations[i].Name" type="text" class="form-control" placeholder="School">
+                </div>
+                <div class="col">
+                    Start date
+                    <input asp-for="Educations[i].EducationStart" type="date" class="form-control" placeholder="Date">
+                </div>
+                <div class="col">
+                    End date
+                    <input asp-for="Educations[i].EducationStop" type="date" class="form-control" placeholder="Date">
+                </div>
+                <div class="col">
+                    Degree
+                    <input asp-for="Educations[i].Degree" type="text" class="form-control" placeholder="Degree">
+                </div>
+                <br />
             </div>
-            <div class="col">
-                Start date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-            <div class="col">
-                End date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-            <div class="col">
-                Degree
-                <input type="text" class="form-control" placeholder="Degree">
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col">
-                School
-                <input type="text" class="form-control" placeholder="School">
-            </div>
-            <div class="col">
-                Start date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-            <div class="col">
-                End date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-            <div class="col">
-                Degree
-                <input type="text" class="form-control" placeholder="Degree">
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col">
-                School
-                <input type="text" class="form-control" placeholder="School">
-            </div>
-            <div class="col">
-                Start date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-            <div class="col">
-                End date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-            <div class="col">
-                Degree
-                <input type="text" class="form-control" placeholder="Degree">
-            </div>
-        </div>
+        }
+        <button asp-action="AddEducation">Add education</button>
 
         @*/ workplace *@
 
         <h5>Work</h5>
-        <div class="row">
-            <div class="col">
-                Workplace
-                <input type="text" class="form-control" placeholder="Workplace">
+        @for (int i = 0; i < Model.WorkPlaces.Count; i++)
+        {
+            <div class="row">
+
+                <div class="col">
+                    Workplace
+                    <input asp-for="WorkPlaces[i].Name" type="text" class="form-control" placeholder="Workplace">
+                </div>
+                <div class="col">
+                    Start date
+                    <input asp-for="WorkPlaces[i].WorkStart" type="date" class="form-control" placeholder="Date">
+                </div>
+                <div class="col">
+                    End date
+                    <input asp-for="WorkPlaces[i].WorkStop" type="date" class="form-control" placeholder="Date">
+                </div>
+                <div class="col">
+                    Description
+                    <textarea asp-for="WorkPlaces[i].Description" type="text" class="form-control" placeholder="Description" aria-label="With textarea"></textarea>
+                </div>
+                <br />
             </div>
-            <div class="col">
-                Start date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-            <div class="col">
-                End date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-        </div>
-        Description
-        <textarea class="form-control" type="text" placeholder="What did you do at this workplace?" aria-label="With textarea"></textarea>
-        <hr>
-        <div class="row">
-            <div class="col">
-                Workplace
-                <input type="text" class="form-control" placeholder="Workplace">
-            </div>
-            <div class="col">
-                Start date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-            <div class="col">
-                End date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-        </div>
-        Description
-        <textarea class="form-control" type="text" placeholder="What did you do at this workplace?" aria-label="With textarea"></textarea>
-        <hr>
-        <div class="row">
-            <div class="col">
-                Workplace
-                <input type="text" class="form-control" placeholder="Workplace">
-            </div>
-            <div class="col">
-                Start date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-            <div class="col">
-                End date
-                <input type="date" class="form-control" placeholder="Date">
-            </div>
-        </div>
-        Description
-        <textarea class="form-control" type="text" placeholder="What did you do at this workplace?" aria-label="With textarea"></textarea>
+        }
+        <button asp-action="AddWork" class="btn-block">Add work place</button>
+
+        <button class="btn btn-primary" type="submit">Submit</button>
     </form>
-
-    <button class="btn btn-primary">Submit</button>
-
 </div>
-@section Scripts{
-    @{
-        <partial name="_ValidationScriptsPartial" />
-    }
-}
-
