Man kan nu skapa CV som sparas i databasen. Har även lagt till session för att lättare hantera inloggad användare.

--- a/CvHub/Views/Template/Template1.cshtml
+++ b/CvHub/Views/Template/Template1.cshtml
@@ -5,7 +5,7 @@
 
     <div class="wholeCv container padding">
         <div class="row">
-            <a class="btn btn-primary btn-lg" asp-controller="Template" asp-action="TemplateForm" style="text-align:center; margin:auto;">Choose this template</a><br>
+            <a class="btn btn-primary btn-lg" asp-controller="Template" asp-action="TemplateForm1" style="text-align:center; margin:auto;">Choose this template</a><br>
         </div>
        
 
@@ -110,7 +110,7 @@
         </div>
         <div class="row">
             <br>
-            <a class="btn btn-primary btn-lg" asp-controller="Template" asp-action="TemplateForm" style="text-align:center; margin:auto;">Choose this template</a>
+            <a class="btn btn-primary btn-lg" asp-controller="Template" asp-action="TemplateForm1" style="text-align:center; margin:auto;">Choose this template</a>
         </div>
     </div>
 
