--- a/CvHub/Views/Template/Index.cshtml
+++ b/CvHub/Views/Template/Index.cshtml
@@ -23,7 +23,7 @@
         </div>
         <div class="col">
             <a class="btn btn-primary" asp-controller="Template" asp-action="Template1" >View</a> @*Should oper the page Cv.cshtml*@
-            <a class="btn btn-light" asp-controller="Template" asp-action="TemplateForm">Choose</a>
+            <a class="btn btn-light" asp-controller="Template" asp-action="TemplateForm1">Choose</a>
         </div>
     </div>
 
