--- a/CvHub/Views/Template/TemplateForm1.cshtml
+++ b/CvHub/Views/Template/TemplateForm1.cshtml
@@ -1,5 +1,6 @@
 ﻿@model CVHub.Models.CvTemp
 
+
 <meta name="keywords" content="About Us, CV, Job Application, Help with CV, CVHub">
 <link rel="stylesheet" href="~/css/template/templateform.css" />
 
@@ -76,7 +77,7 @@
                 <br />
             </div>
         }
-        <button asp-action="AddWork" class="btn-block">Add work place</button>
+        <button asp-action="AddWork" class="btn-dark text-center">Add work place</button>
 
         <button class="btn btn-primary" type="submit">Submit</button>
     </form>
