problems in CvController.Get

--- a/CvHub/Views/User/MyPage.cshtml
+++ b/CvHub/Views/User/MyPage.cshtml
@@ -13,7 +13,7 @@
                     <span class="text-black-50">@Model.Email</span>
                     <span>@Model.Country</span>
                 </div>
-                <div class="mt-5 text-center"><button class="btn btn-outline-primary profile-button" type="button">My CVs</button></div>
+                <div class="mt-5 text-center"><a class="btn btn-outline-primary profile-button" asp-controller="Cv" asp-action="CvList" type="button">My CVs</a></div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 py-5">
