--- a/CvHub/Views/Cv/Cv.cshtml
+++ b/CvHub/Views/Cv/Cv.cshtml
@@ -41,7 +41,7 @@
             <img src="~/css/template/img/booksdark.svg" alt="education" />
         </div>
         <div id="education" class="experienceText col col-lg-8 col-md-8 col-sm-8">
-            @foreach (Education education in Model.Educations)
+            @foreach (var education in Model.Educations)
             {
                 <strong>@education.Name</strong>
                 <p>@education.EducationStart - @education.EducationStop - @education.Degree</p>
@@ -61,7 +61,7 @@
         </div>
         <div id="work" class="experienceText col col-lg-8 col-md-8 col-sm-8">
             <h2>Work</h2>
-            @foreach (Work work in Model.WorkPlaces)
+            @foreach (var work in Model.WorkPlaces)
             {
                 <strong>@work.Name</strong>
                 <p>@work.WorkStart - @work.WorkStop</p>
