lista med Cv klar backend. KAn öppna cv med rätt uppgifter nu också.

--- a/CvHub/Views/User/MyPage.cshtml
+++ b/CvHub/Views/User/MyPage.cshtml
@@ -49,6 +49,10 @@
                             <label class="labels">Country</label>
                             <input type="text" class="form-control" placeholder="@Model.Country">
                         </div>
+                        <div class="profile-form col-md-12">
+                            <label class="labels">LinkedIn</label>
+                            <input type="url" class="form-control" placeholder="@Model.LinkedIn">
+                        </div>
                     </div>
                 </div>
             </div>
