--- a/CvHub/Views/Cv/Cv.cshtml
+++ b/CvHub/Views/Cv/Cv.cshtml
@@ -17,8 +17,14 @@
             <a class="btn" href="#education" role="button">Education</a>
             <a class="btn" href="#work" role="button">Work</a>
             <a class="btn" href="#contactMe" role="button">Contact</a>
-            <a class="btn" href="https://www.linkedin.com/" target="_blank" role="button">LinkedIn</a>
-
+            @if (Model.User.LinkedIn == null)
+            {
+                <a class="btn" href="https://www.linkedin.com/" target="_blank" role="button">LinkedIn</a>
+            }
+            else
+            {
+                <a class="btn" href="@Model.User.LinkedIn" target="_blank" role="button">LinkedIn</a>
+            }
         </div>
     </div>
 </div>
