--- a/CvHub/Views/User/Register.cshtml
+++ b/CvHub/Views/User/Register.cshtml
@@ -30,6 +30,10 @@
             <input asp-for="City" type="text" class="form-control item" id="city" placeholder="City">
             <span asp-validation-for="City" class="text-danger"></span>
         </div>
+        <div class="form-group">
+            <input asp-for="LinkedIn" type="text" class="form-control item" id="LinkedIn" placeholder="LinkedIn">
+            <span asp-validation-for="LinkedIn" class="text-danger"></span>
+        </div>
         @if (Model != null)
         {
             <div class="text-center text-danger">@Model.Email is already taken!</div>
