--- a/CvHub/Views/Home/Index.cshtml
+++ b/CvHub/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="~/css/socialMedia.css" />
 </head>
 
-<div class="container-fluid">
+<div class="container-fluid float-left col-4">
     <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-8 col-xl-4 p-sm-2 p-md-2 p-lg-5 p-xl-5">
+        <div class="col-sm-4 col-md-4 col-lg-12 col-xl-12 p-sm-2 p-md-2 p-lg-5 p-xl-5">
             <div class="card-signin">
                 <div class="card-body">
                     <img class="col mx-auto text-center" src="~/Pic/cvlogo.svg" alt="CV" style="max-height:100px">
@@ -29,8 +29,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 p-sm-2 p-md-2 p-lg-5 p-xl-5 offset-xl-4">
-           
-        </div>
+        
     </div>
+</div>
+<div class="float-right col-sm-8 col-md-8 col-lg-8 col-xl-8 mb-2">
+    <img src="~/Pic/frontpageCvHub.svg" style="position:absolute"/>
 </div>
