--- a/CvHub/Views/Shared/_Layout.cshtml
+++ b/CvHub/Views/Shared/_Layout.cshtml
@@ -1,7 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CVHub</title>
@@ -28,8 +30,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Template" asp-action="index"><h6 class="tab">Templates</h6></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark font-weight-bold" asp-controller="Validation" asp-action="LogOut"><h6 class="tab">Sign out</h6></a>
-                            <a class="nav-link text-dark font-weight-bold" asp-controller="Validation" asp-action="SignIn"><h6 class="tab">Sign in</h6></a>
+                            @if (HttpContextAccessor.HttpContext.Session.GetString("Email") != null)
+                            {
+                                <a class="nav-link text-dark font-weight-bold" asp-controller="Validation" asp-action="LogOut"><h6 class="tab">Sign out</h6></a>
+                            }
+                            else
+                            {
+                                <a class="nav-link text-dark font-weight-bold" asp-controller="Validation" asp-action="SignIn"><h6 class="tab">Sign in</h6></a>
+                            }
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark tab" asp-area="" asp-controller="User" asp-action="MyPage"><h6 class="tab">My Page</h6></a>
