--- a/CvHub/Views/Template/Index.cshtml
+++ b/CvHub/Views/Template/Index.cshtml
@@ -2,11 +2,8 @@
 <link rel="stylesheet" href="~/css/template/index.css" />
 
 
-
-<h3>Choose a template</h3>
-
 <div class="container">
-
+    <h3 style="text-align:center;">Choose a template</h3>
     <div class="row templates" style="margin:8% auto 0 auto;">
         <div class="col">
             <img class="comingsoon" src="~/css/template/img/comingsoon.svg" style="width:70%" title="Elegant" alt="Elegant" />
@@ -17,12 +14,12 @@
 
     </div>
 
-    <div class="row templates" style="margin:8% auto 8% auto;">
+    <div class="row templates" style="margin:4% auto auto auto;">
         <div class="col">
             <h5 style="margin-top:0.5%">Coming soon!</h5>
         </div>
         <div class="col">
-            <a class="btn btn-primary" asp-controller="Template" asp-action="Template1" >View</a> @*Should oper the page Cv.cshtml*@
+            <a class="btn btn-primary" asp-controller="Template" asp-action="Template1">View</a> @*Should oper the page Cv.cshtml*@
             <a class="btn btn-light" asp-controller="Template" asp-action="TemplateForm1">Choose</a>
         </div>
     </div>
