--- a/CvHub/Views/Home/Index.cshtml
+++ b/CvHub/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="col-sm-4 col-md-4 col-lg-12 col-xl-12 p-sm-2 p-md-2 p-lg-5 p-xl-5">
             <div class="card-signin">
                 <div class="card-body">
-                    <img class="col mx-auto text-center" src="~/Pic/cvlogo.svg" alt="CV" style="max-height:100px">
+                    <img class="col mx-auto text-center" src="~/Pic/cvlogo.svg" alt="CV" style="max-height:100px;">
                     <h5 class="card-title text-center">Sign In</h5>
                     <form method="post" asp-controller="Validation" asp-action="DbAuthenticate" class="form-signin">
                         <div class="form-label-group">
