--- a/CvHub/wwwroot/css/socialMedia.css
+++ b/CvHub/wwwroot/css/socialMedia.css
@@ -61,15 +61,15 @@
     }
 
     .form-label-group input::-webkit-input-placeholder {
-        color: transparent;
+        color: black;
     }
 
     .form-label-group input:-ms-input-placeholder {
-        color: transparent;
+        color: black;
     }
 
     .form-label-group input::-moz-placeholder {
-        color: transparent;
+        color: black;
     }
 
 
