--- a/CvHub/wwwroot/css/template/index.css
+++ b/CvHub/wwwroot/css/template/index.css
@@ -14,5 +14,13 @@ h5{
     text-align:center !important;
 }
 
+hr{
+   margin: 3em;
+}
+
+.btn.btn-primary:hover{
+    background-color:orange;
+   
+}
 
 
