-swagger POST error fixed -update user added -change password added

--- a/CvHub/Views/Cv/Cv.cshtml
+++ b/CvHub/Views/Cv/Cv.cshtml
@@ -23,7 +23,7 @@
             }
             else
             {
-                <a class="btn" href="@Model.User.LinkedIn" target="_blank" role="button">LinkedIn</a>
+                <a class="btn" href="https://@Model.User.LinkedIn" target="_blank" role="button">LinkedIn</a> 
             }
         </div>
     </div>
