--- a/CvHub/Views/Home/Index.cshtml
+++ b/CvHub/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CVHub.Models.User
+﻿@model CVHub.Models.LoginUser
 
 <head>
     <link rel="stylesheet" href="~/css/socialMedia.css" />
@@ -29,7 +29,6 @@
                 </div>
             </div>
         </div>
-        
     </div>
 </div>
 <div class="float-right col-sm-8 col-md-8 col-lg-8 col-xl-8 mb-2">
