--- a/CvHub/Views/Template/TemplateForm1.cshtml
+++ b/CvHub/Views/Template/TemplateForm1.cshtml
@@ -7,8 +7,9 @@
 <div class="container wholeform">
 
     <h5>Photo</h5>
-    <form method="post" asp-controller="Cv" asp-action="Create">
+    <form method="post" asp-controller="Cv" asp-action="Create1">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
         <div class="custom-file col">
             <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
             <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
