--- a/CvHub/Views/User/MyPage.cshtml
+++ b/CvHub/Views/User/MyPage.cshtml
@@ -14,6 +14,7 @@
                     <span>@Model.Country</span>
                 </div>
                 <div class="mt-5 text-center"><a class="btn btn-outline-primary profile-button" asp-controller="Cv" asp-action="CvList" type="button">My CVs</a></div>
+                <div class="mt-2 text-center"><a class="btn btn-outline-primary profile-button btn-sm" asp-action="Update" asp-route-Id="@Model.UserId" type="button">Edit Profile</a></div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 py-5">
