- Delete Cv klar

--- a/CvHub/Views/Cv/CvList.cshtml
+++ b/CvHub/Views/Cv/CvList.cshtml
@@ -19,6 +19,7 @@
             </div>
             <div class="m-5 text-center">
                 <a class="btn btn-primary m-3" style="border:none;" asp-controller="Cv" asp-action="Get" asp-route-Id="@cv.CvId">Choose</a>
+                <a class="btn btn-danger m-3" style="border:none;" asp-controller="Cv" asp-action="DeleteCv" asp-route-Id="@cv.CvId">Delete</a>
             </div>
             <hr>
         }
