--- a/CvHub/Views/User/Register.cshtml
+++ b/CvHub/Views/User/Register.cshtml
@@ -51,7 +51,7 @@
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <input type="submit" class="btn btn-block create-account" value="Create Account">
+            <input type="submit" class="btn btn-block create-account" id="createAccount" value="Create Account">
         </div>
     </form>
 </div>
