Changed State to Postal Code

--- a/CvHub/Views/User/MyPage.cshtml
+++ b/CvHub/Views/User/MyPage.cshtml
@@ -48,9 +48,9 @@
                             <span id="city">@Model.City</span>
                         </div>
                         <div class="profile-form col-md-6">
-                            <label class="labels">State/Region</label>
+                            <label class="labels">Postal Code</label>
                             <br />
-                            <span id="state">@Model.State</span>
+                            <span id="postalcode">@Model.PostalCode</span>
                         </div>
                         <div class="profile-form col-md-12">
                             <label class="labels">Country</label>
