--- a/CvHub/Views/User/Register.cshtml
+++ b/CvHub/Views/User/Register.cshtml
@@ -23,8 +23,8 @@
             <span asp-validation-for="Country" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <input asp-for="State" type="text" class="form-control item" id="state" placeholder="State">
-            <span asp-validation-for="State" class="text-danger"></span>
+            <input asp-for="PostalCode" type="text" class="form-control item" id="postalcode" placeholder="Postal Code">
+            <span asp-validation-for="PostalCode" class="text-danger"></span>
         </div>
         <div class="form-group">
             <input asp-for="City" type="text" class="form-control item" id="city" placeholder="City">
