--- a/CvHub/Views/User/Update.cshtml
+++ b/CvHub/Views/User/Update.cshtml
@@ -51,9 +51,9 @@
                             <span asp-validation-for="City" class="text-danger"></span>
                         </div>
                         <div class="profile-form col-md-6">
-                            <label class="labels">State/Region</label>
-                            <input asp-for="State" type="text" class="form-control" placeholder="@Model.State">
-                            <span asp-validation-for="State" class="text-danger"></span>
+                            <label class="labels">Postal Code</label>
+                            <input asp-for="PostalCode" type="text" class="form-control" placeholder="@Model.PostalCode">
+                            <span asp-validation-for="PostalCode" class="text-danger"></span>
                         </div>
                         <div class="profile-form col-md-12">
                             <label class="labels">Country</label>
