Tobias - About me text fixed

--- a/CvHub/Views/Cv/Cv.cshtml
+++ b/CvHub/Views/Cv/Cv.cshtml
@@ -29,7 +29,7 @@
     </div>
 </div>
 
-<div id="aboutMe" class="row padding">
+<div id="aboutMe" class="text-left">
     <h2> About me </h2>
     <p>
         @Model.AboutMe
