--- a/CvHub/Views/Template/TemplateForm1.cshtml
+++ b/CvHub/Views/Template/TemplateForm1.cshtml
@@ -7,13 +7,19 @@
 <div class="container wholeform">
 
     <h5>Photo</h5>
-    <form method="post" asp-controller="Cv" asp-action="Create1">
+    <form enctype="multipart/form-data" method="post" asp-controller="Cv" asp-action="Create1">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         <div class="custom-file col">
-            <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
-            <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+            <input asp-for="Picture" type="file" class="form-control custom-file-input"  >
+            <label class="custom-file-label">Choose file</label>
         </div>
+
+
+
+
+
+
 
         <div class="col pl-0">
             <h5>Title</h5>
@@ -82,5 +88,20 @@
         <button class="btn btn-light border mb-4" asp-action="AddWork">Add work place</button>
         <br />
         <button class="btn btn-primary" type="submit">Submit</button>
+
+        @section Scripts{
+            <script>
+                $(document).ready(function () {
+                    $('.custom-file-input').on("change", function () {
+                        var fileName = $(this).val().split("\\").pop();
+                        $(this).next('.custom-file-label').html(fileName);
+                    });
+                });
+            </script>
+        }
     </form>
 </div>
+
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
